--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "restock-ex",
   "version": "0.1.0",
+  "homepage": "https://bermudaog.github.io/shopping-cart",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
